fix(contact): wrap contact buttons for overflow issues on mobile

--- a/packages/frontend/src/components/DialogDetails/DialogHelp.module.css
+++ b/packages/frontend/src/components/DialogDetails/DialogHelp.module.css
@@ -13,3 +13,10 @@
   font-size: 1.5em;
   margin-right: 0.25em;
 }
+
+.contactInfoBtn {
+  white-space: normal;
+  height: auto;
+  text-align: left;
+  text-wrap: balance;
+}
